--- a/DummyText(A Townhall)/DummyTextTownhall.csproj
+++ b/DummyText(A Townhall)/DummyTextTownhall.csproj
@@ -9,15 +9,14 @@ There are also methods that allow you count the number of letters in a sentense 
 Note: whitespaces are also characters.</Description>
     <Configurations>Release;Debug</Configurations>
     <UserSecretsId>7600722b-6de4-4b4b-901e-fe5954a5a5cc</UserSecretsId>
-    <ReleaseVersion>0.2</ReleaseVersion>
     <SynchReleaseVersion>false</SynchReleaseVersion>
+    <RepositoryUrl>https://github.com/Myxic/DummyTexts</RepositoryUrl>
+    <ReleaseVersion>1.0.3</ReleaseVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DocumentationFile>bin\Release\netstandard2.0\DummyText%28A Townhall%29.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DocumentationFile>bin\Debug\netstandard2.0\DummyText%28A Townhall%29.xml</DocumentationFile>
   </PropertyGroup>
 </Project>
